--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: test
-    - name: Download math result for job 2
+    
+    steps:
+    - name: Download builds artifacts to be deployed
       uses: actions/download-artifact@v2
       with:
-        name: builds
-    - name: Deploy
+      name: builds
+    - name: Deploy artifacts
       uses: s0/git-publish-subdir-action@develop
       env:
         REPO: self
