--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: builds
+    - name: testing
+      run: |
+        ls
     - name: Deploy artifacts
       uses: s0/git-publish-subdir-action@develop
       env:
