--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,13 +33,21 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: builds
-    - name: testing
+    - name: Create CNAME file with custom domain
+      run |
+        echo "aurelienjames.com" > CNAME
+    - name: Init git and commit builds artifacts
       run: |
         ls
+        git init
+        git add -A
+        git config --local user.email "action-bot@github.com"
+        git config --local user.name "GitHub Action Bot"
+        git commit -m 'deploy'
     - name: Deploy artifacts
-      uses: s0/git-publish-subdir-action@develop
-      env:
-        REPO: self
-        BRANCH: builds
-        FOLDER: builds
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: ad-m/github-push-action@v0.5.0
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: builds
+        force: true
+        directory: .
