--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Personal website",
   "main": "index.js",
   "scripts": {
+    "build": "npx webpack --config=webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,10 @@
   },
   "homepage": "https://github.com/aurelienjames/aurelienjames.github.io#readme",
   "devDependencies": {
-    "typescript": "^4.2.4"
+    "ts-loader": "^9.1.1",
+    "typescript": "^4.2.4",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
