--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Personal website",
   "main": "index.js",
   "scripts": {
-    "build": "npx webpack --config=webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "npx webpack serve --mode=development --hot",
+    "build": "npx webpack --mode=production --config=webpack.config.js",
+    "build:dev": "npx webpack --mode=development --config=webpack.config.js",
+    "test": "npx jasmine-ts --config=jasmine.json"
   },
   "repository": {
     "type": "git",
@@ -18,7 +20,13 @@
   },
   "homepage": "https://github.com/aurelienjames/aurelienjames.github.io#readme",
   "devDependencies": {
+    "@types/jasmine": "^3.6.10",
+    "copy-webpack-plugin": "^8.1.1",
+    "jasmine": "^3.7.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "jasmine-ts": "^0.3.3",
     "ts-loader": "^9.1.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.4",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0",
