--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,13 @@ jobs:
       with:
         node-version: '15.x'
     - run: npm ci
-    - run: npm run build:prod
-    - run: npm run test:ci
+    - run: npm run build
+    - run: npm run test
     - name: Upload builds artifacts
       uses: actions/upload-artifact@v2
       with:
         name: builds
-        path: dist/aurelienjames-github-io
+        path: dist/
         retention-days: 1
 
   deploy:
